# effibote3

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  effibote3.repos  effibote3_public.repos  package.xml
effibote3/: CMakeLists.txt  package.xml
effibote3_bringup/: CMakeLists.txt  README.md  package.xml
effibote3_bringup/config/: controller_manager.yaml  diff_drive_controller.yaml  mobile_base_controller.yaml
effibote3_bringup/launch/: adpa2e_gazebo.launch.py  effibote3.launch.py  effibote3_base.launch.py  effibote3_gazebo.launch.py  effibote3_live.launch.py  effibote3_teleop.launch.py  effibote3_test.launch.py
effibote3_bringup/python/: effibote3_bringup.py
effibote3_bringup/scripts/: urdf_description.py
effibote3_bringup/test/: test_urdf_description.py
effibote3_description/: CMakeLists.txt  README.md  package.xml
effibote3_description/config/: effibote3.yaml  effibote3_chassis.yaml  effibote3_joints.yaml  effibote3_kinematic.yaml  effibote3_links.yaml  effibote3_odometry.yaml  gazebo_ros_control.yaml  teleop.yaml
effibote3_description/launch/: display.launch  view_effibote3.launch.py  view_effibote3.launch.xml
effibote3_description/python/: effibote3_description.py
effibote3_description/ros2_control/: effibote3.ros2_control.urdf.xacro  effibote3.ros2_control.xacro
effibote3_description/test/: test_effibote3_description.py
effibote3_description/urdf/: effibote3.urdf.xacro  effibote3.xacro
effibote3_description/urdf/old/: effibote3.urdf.xacro
effibote3_description/urdf/visual/: chassis.xacro
effibote3_hardware/: CMakeLists.txt  README.md  effibote3_hardware.xml  package.xml
effibote3_hardware/include/effibote3_hardware/: effibote3_communicator_receiver.hpp  effibote3_communicator_sender.hpp  effibote3_control.h  effibote3_display.hpp  effibote3_hardware.hpp  effibote3_param.hpp
effibote3_hardware/src/: effibote3_communicator_receiver.cpp  effibote3_communicator_sender.cpp  effibote3_control.cpp  effibote3_display.cpp  effibote3_hardware.cpp  effibote3_node.cpp
